--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
 body {
   background-color: rgb(164, 254, 224);
 }
@@ -9,9 +17,12 @@ h1 {
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  min-height: 600px;
   text-align: start;
   background-color: rgb(214, 170, 206);
-  min-height: 500px;
   width: 400px;
   margin: 40px auto;
 }
